# Sparo-Agentic-OS

./: .gitignore  AGENTS-CN.md  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/workflows/: desktop-package.yml  nightly.yml  release-please.yml
docs/: sparo-vi-design.md
installer/: .gitignore  README.md  package.json  vite.config.ts
installer/scripts/: sync-theme-i18n.cjs
installer/src/: main.tsx
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: main.rs
installer/src/components/: CheckIcon.tsx  Checkbox.tsx  ProgressBar.tsx  WindowControls.tsx
installer/src/i18n/: index.ts
installer/src/pages/: LanguageSelect.tsx  ThemeSetup.tsx  Uninstall.tsx
installer/src/styles/: animations.css  global.css  variables.css
installer/src/theme/: installerThemeRuntime.ts  installerThemesData.ts
installer/src/types/: installer.ts
live_app/Demo/background-remover/: meta.json  package.json
live_app/Demo/git-graph/: README.md  package.json
live_app/Skills/liveapp-dev/: SKILL.md  api-reference.md  architecture.md  design-playbook.md
scripts/: console-style.cjs  debug-log-server.mjs  dev.cjs  ensure-openssl-windows.mjs  generate-rounded-app-icon.mjs  generate-version.cjs  mobile-web-build.cjs  verify-monaco-assets.cjs
scripts/ci/: setup-openssl-windows.ps1
src/apps/cli/: Cargo.toml
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/relay-server/: Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  restart.sh  start.sh  stop.sh  test_incremental_upload.py
src/apps/relay-server/src/: config.rs  lib.rs  main.rs
src/apps/relay-server/src/relay/: mod.rs
src/apps/relay-server/src/routes/: api.rs  mod.rs
src/apps/relay-server/static/: index.html
src/apps/relay-server/static/homepage/: index.html
src/apps/server/: Cargo.toml  README.md
src/apps/server/src/: ai_relay.rs  bootstrap.rs  main.rs  rpc_dispatcher.rs
src/apps/server/src/routes/: api.rs  mod.rs  websocket.rs
src/crates/: LOGGING.md
src/crates/ai-adapters/: README.md
src/crates/core/: Cargo.toml
src/crates/events/: Cargo.toml
src/crates/events/src/: agentic.rs  emitter.rs  lib.rs
src/crates/transport/: Cargo.toml
src/crates/webdriver/: Cargo.toml
src/crates/webdriver/src/: lib.rs
src/mobile-web/: index.html  package-lock.json  package.json  vite.config.ts
src/mobile-web/src/: App.tsx
src/web-ui/: LOGGING.md  README.md  README.zh-CN.md  index.html  package.json  preview.html  tsconfig.json  tsconfig.node.json  vite.config.preview.ts  vite.config.ts  vite.config.version-plugin.ts
src/web-ui/src/: main.tsx
tests/e2e/: .gitignore  E2E-TESTING-GUIDE.md  E2E-TESTING-GUIDE.zh-CN.md  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json
tests/e2e/config/: capabilities.ts  wdio.conf.ts  wdio.conf_l0.ts  wdio.conf_l1.ts
tests/e2e/fixtures/: test-data.json
tests/e2e/helpers/: index.ts  markdown-helper.ts  tauri-utils.ts  wait-utils.ts  workspace-helper.ts  workspace-utils.ts
tests/e2e/page-objects/: ChatPage.ts  index.ts  (+1 more)
(+1239 files in other folders)
