[package]
name = "bitfun-webdriver"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Embedded WebDriver server for BitFun desktop"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSError", "NSDictionary"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "WKPDFConfiguration", "block2", "objc2-app-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
tempfile = "3"
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
windows-core = "0.61.2"

[target.'cfg(target_os = "linux")'.dependencies]
tempfile = "3"
